snapshot at runnable on jdk17 without embedded javafx but some issues with jaxb to finish